# infix-op-lisp

./: DESIGN.md  README.md
.github/: copilot-instructions.md
.github/instructions/: common.instructions.md  infix-op-lisp-design.instructions.md  lisp-to-ocaml.instructions.md  ocaml.instructions.md
ADR/: def-type.md  def_type.md  parser-performance.md  pattern-match-binding.md  top-level-declarations.md  transpilation-pipeline.md  type-declaration.md  type-system.md  type.md  variable-scope.md
PoC/lisp_to_ocaml/: .ocamlformat  .ocamlformat-ignore  dune-project  generated.ml  lisp_to_ocaml.opam
PoC/lisp_to_ocaml/docs/: parsetree_conversion.md
PoC/lisp_to_ocaml/lib/: dune  extra.ml  lisp_ast.ml  lisp_to_ocaml.ml  lisp_type.ml  parser.ml  transpiler.ml  type_checker.ml  type_system.ml  validate.ml  validation.ml
PoC/lisp_to_ocaml/test/: dune  test_lisp_ast.ml  test_parser.ml  test_transpiler.ml  test_type_checker.ml
PoC/lisp_to_ocaml/test/expected/: bool.ml  function.ml  if.ml  int.ml  let.ml  list.ml  match.ml  recursive_function.ml
docs/: _comment-conventions.md  basic-data-structures.md  basic-syntax.md  collection-types.md  def-types.md  infix-operators.md  struct-types.md  type-declaration.md
