(test
 (name test_transpiler)
 (modules test_transpiler)
 (libraries lisp_to_ocaml alcotest)
 (deps
  (glob_files expected/*.ml)))

(test
 (name test_lisp_ast)
 (modules test_lisp_ast)
 (libraries lisp_to_ocaml alcotest))

(test
 (name test_type_checker)
 (modules test_type_checker)
 (libraries lisp_to_ocaml alcotest))

(test
 (name test_parser)
 (modules test_parser)
 (libraries lisp_to_ocaml alcotest))
